--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
                 <a class="nav__list-item-link" href="#projects">Proyectos</a>
               </li>
               <li class="nav__list-item">
+                <a class="nav__list-item-link" href="#videos">Videos</a>
+              </li>
+              <li class="nav__list-item">
                 <a class="nav__list-item-link" href="#contact">Contacto</a>
               </li>
               <li class="nav__list-item">
@@ -307,6 +310,63 @@
           <a href="https://github.com/jonathangg03">GitHub</a>.
         </p>
       </section>
+      <section class="videos" id="videos">
+        <h2>VIDEOS</h2>
+        <p>
+          Mira algunos videos de mi canal de YouTube.
+          <a
+            href="https://www.youtube.com/channel/UCv3xpBFtUyuc5Ple62kOYSA"
+            target="_blank"
+            >Visita mi canal</a
+          >.
+        </p>
+        <ul>
+          <li>
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/fm7mkj1qIao"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </li>
+          <li>
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/ActzTNgH2C4"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </li>
+          <li>
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/VLyoPGhZ4hQ"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </li>
+          <li>
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/d_l6AvGYXOQ"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </li>
+        </ul>
+      </section>
       <section class="contact" id="contact">
         <h2>FORMULARIO DE CONTACTO</h2>
         <form
@@ -389,6 +449,9 @@
             <a class="nav-responsive__list-item-link" href="#projects"
               >Proyectos</a
             >
+          </li>
+          <li class="nav-responsive__list-item">
+            <a class="nav-responsive__list-item-link" href="#videos">Videos</a>
           </li>
           <li class="nav-responsive__list-item">
             <a class="nav-responsive__list-item-link" href="#contact"
