Add: Youtube playlist project

--- a/index.html
+++ b/index.html
@@ -304,6 +304,35 @@
               />
             </div>
           </div>
+          <div class="projects__item">
+            <div class="projects__item-description">
+              <h3>YouTube Playlist</h3>
+              <h4>Creación de Playlist con videos de YouTube.</h4>
+              <p>
+                Una aplicación que usa la API de YouTube para buscar videos y
+                crear una playlist usando Drag and drop.
+              </p>
+              <div class="projects__item-description-buttons">
+                <a
+                  href="https://youtube-playlist-ten.vercel.app/"
+                  target="_blank"
+                  ><span>Ver proyecto</span></a
+                >
+                <a
+                  href="https://github.com/jonathangg03/youtube-playlist"
+                  target="_blank"
+                  ><span>Ver Código</span></a
+                >
+              </div>
+            </div>
+            <div class="projects__item-image">
+              <img
+                src="./assets/projects/playlist.jpg"
+                alt="Autenticación"
+                loading="lazy"
+              />
+            </div>
+          </div>
         </div>
         <p class="projects__cta">
           Sí quieres ver más de mis proyectos, visita mi
