Delete: Form Contact

--- a/index.html
+++ b/index.html
@@ -397,31 +397,8 @@
         </ul>
       </section>
       <section class="contact" id="contact">
-        <h2>FORMULARIO DE CONTACTO</h2>
-        <form
-          action="https://formspree.io/f/mdoywqpd"
-          method="POST"
-          id="form"
-          class="form__item"
-        >
-          <label>
-            <p>Nombre completo</p>
-            <input type="text" required name="name" />
-          </label>
-          <label>
-            <p>Nombre de la empresa</p>
-            <input type="text" required name="company" />
-          </label>
-          <label>
-            <p>Mensaje</p>
-            <textarea
-              name="message"
-              id="message"
-              cols="30"
-              rows="10"
-            ></textarea>
-          </label>
-          <button type="submit"><span>Enviar</span></button>
+        <h2>CONTACTO</h2>
+        <article class="contact__social">
           <ul>
             <li>
               <a href="https://github.com/jonathangg03" target="_blank"
@@ -453,8 +430,8 @@
               ></a>
             </li>
           </ul>
-        </form>
-        <article class="contact__social"></article>
+          <p>Creado por: Davdev - jona03g97@gmail.com</p>
+        </article>
       </section>
       <div class="header__activator" id="header__activator">
         <i class="fas fa-bars"></i>
@@ -497,14 +474,6 @@
           </li>
         </ul>
       </nav>
-      <div class="sendedMessage">
-        <div class="sendedMessage__content">
-          <div class="sendedMessage__content-icon">
-            <i class="fas fa-solid fa-check"></i>
-          </div>
-          <span>Mensaje enviado correctamente!</span>
-        </div>
-      </div>
     </div>
     <script src="./intersections.js"></script>
     <script src="./activators.js"></script>
